--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@react-router/serve": "^7.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "isbot": "^5.1.27",
     "lucide-react": "^0.513.0",
     "luxon": "^3.6.1",
     "react": "^19.1.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.6.2",
