--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.6.2",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.61"
   },
