--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
+    "type-fest": "^4.41.0",
     "zod": "^3.25.61"
   },
   "devDependencies": {
